--- a/.github/workflows/update_proxy_status.yml
+++ b/.github/workflows/update_proxy_status.yml
@@ -34,7 +34,7 @@ jobs:
       run: |
         git config --local user.name "github-actions[bot]"
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git add izin
+        git add ip
         git add error.txt
         if git diff --cached --exit-code; then
           echo "No changes to commit"
